--- a/pom.xml
+++ b/pom.xml
@@ -98,14 +98,14 @@
 	
 	    <repository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://54.252.173.144:9980/mithuntechnologies/repository/wallmart-release/</url>
+	      <name>facebook Releases Nexus Repository</name>
+	      <url>http://3.111.42.247:8081/repository/facebookrelese/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://54.252.173.144:9980/mithuntechnologies/repository/wallmart-snapshot/</url>
+	      <name>facebook Snapshot Nexus Repository </name>
+	      <url>http://3.111.42.247:8081/repository/facebooksnapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
