--- a/pom.xml
+++ b/pom.xml
@@ -98,14 +98,14 @@
 	
 	    <repository>
 	      <id>nexus</id>
-	      <name>facebook Releases Nexus Repository</name>
-	      <url>http://3.111.42.247:8081/repository/facebookrelese/</url>
+	      <name>flipkart</name>
+	      <url>http://18.206.158.111:8081/repository/flipkart/repository/facebookrelese/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>facebook Snapshot Nexus Repository </name>
-	      <url>http://3.111.42.247:8081/repository/facebookrelese/</url>
+	      <name>flipkart1 </name>
+	      <url>http://18.206.158.111:8081/repository/flipkart1/repository/facebookrelese/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
